--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -863,7 +863,6 @@ ul{
 	padding-left:20px;
 	padding-top:2px;
 	text-align:left;
-	width:220px;
 	
 }
 .sidebar .sidebar-upcoming{
@@ -914,7 +913,7 @@ ul{
 }
 
 .sidebar .sidebar-item{
-	width: 240px;
+	width: 250px;
 	padding: 3px 25px;
 }
 
@@ -1420,7 +1419,7 @@ display:none;
 #dynamic-sidebar{
 	overflow-y: auto;
 	padding:10px;
-	width:260px;
+	width:265px;
 	z-index: 100;
 	top: 100px;
 }
@@ -2048,5 +2047,11 @@ display:none;
 
 
 .menu-site-container{
-	display: inline;
+	/*display: inline;*/
+	float: left;
+	
+}
+
+.menu-login-list{
+	float: right;
 }
