column size of ie

--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -1387,6 +1387,12 @@ img{
 }
 
 
+.digressit_type{
+	width: 50%;
+	margin-left: 15px;
+}
+
+
 .textblock{
 	background-color:white;
 	margin-bottom:12px;
