intermidate fix to commentbox, edits to readme, positioning of sidebar

--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -1028,8 +1028,24 @@ img{
 	position: relative;
 	margin: 0 auto;
 	left: 0;
+	top: 0;
 }
 
+#wrapper{
+	background:transparent #F5F8F8;
+	margin:0 auto;
+	min-height:100%;
+	position:absolute;
+	overflow: visible;
+}
+
+#wpadminbar .ab-top-menu a{
+	color: #CCCCCC !important;
+}
+
+.paragraph-block-button:hover{
+	cursor: pointer;
+}
 
 #content{
 	background-color: white;
@@ -1097,12 +1113,6 @@ img{
 
 .embedcode{
 	display:none; 
-}
-#wrapper{
-	background:transparent #F5F8F8;
-	margin:0 auto;
-	min-height:100%;
-	position:absolute;
 }
 
 
@@ -1221,6 +1231,10 @@ img{
 	background-color: white;
 	height: 100%;
 	z-index: 1000;
+}
+
+#dynamic-sidebar{
+	padding: 0;
 }
 
 
