--- a/trunk/themes/digressit-report/style.css
+++ b/trunk/themes/digressit-report/style.css
@@ -32,11 +32,11 @@ body{
 
 .the_title{
 	border: 0px !important;
-	margin-left: 40px;
+	margin-left: 0;
 }
 
 .home #content{
-	margin: 0 10px;
+	margin: 0;
 }
 h1 	{
 	font: 1.5em/1.15em "Times New Roman", "Times New Roman PS MT", Times, serif;
@@ -117,21 +117,19 @@ strong {
 }
 /* TITLE BAR 
 ********************************/	
-#header{			/* titlebarContainer holds the title and the presentedyBy line */
-	width: 100%;
-	position: fixed;			/* IE handles this differently.	*/
-	top: 0;
-	left: 0;
-	display: block;
-	background-color: #ffffff;
-	z-index: 10000;
-	border-bottom: 1px solid #a9aaae;
-	margin: 0;
-	}
+#header {
+    background-color: #FFFFFF;
+	border: 0;
+    display: block;
+    left: 0;
+    margin: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
 	
 .the_title{
-	margin-top: 100px;
-	width: 100%;
 }
 
 .the_title h2{
@@ -196,10 +194,9 @@ strong {
     margin-right: auto;
     margin-top: 0;
     min-height: 500px;
-    padding-left: 20px;
-    padding-top: 30px;
     position: relative;
     width: 1000px;
+	padding: 0;
 }
 
 .site-title h1 {
@@ -231,7 +228,7 @@ h3 {
     display: block;
     float: none;
     font-size: 180%;
-    padding: 40px 10px 10px;
+    padding: 5px 10px 10px;
     text-decoration: none;
 }
 	
@@ -266,8 +263,10 @@ a {
     border-color: #BDBDBD;
     border-style: solid;
     border-width: 0 1px;
-    margin: 0 0 0 30px;
+    margin: 0;
     max-width: 1000px;
     min-height: 600px;
     position: relative;
 }
+
+
