--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -282,6 +282,10 @@ h4 {
 	
 }
 
+#submit-comment{
+	text-transform: capitalize;
+}
+
 
 .frontpage .the_title, .site-home .the_title{
 	display:none;
