--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -163,6 +163,10 @@ body.error404 {
 	padding: 5px;
 }
 
+.paragraph-block-0 .paragraph-label{
+	display: none;
+}
+
 #comments-sort-all, #no-comments{
 	display: none;
 }
@@ -406,12 +410,12 @@ div.bubble cite.rounded {
 	color: inherit;
 }
 
+
 .transparent-submit-button:hover{
 	cursor: pointer;
 }
 
 #lightbox-content input{
-	background-color:#FEFEE0;
 	color:#666666;
 	font-size:20px;
 	padding:5px;
@@ -515,15 +519,14 @@ a:hover{
 
 
 #lightbox-content input {
-	background-color: white !important;
 	font-size:15px !important;
 }
 
 
-.submit{
+.submit, input[type=button], input[type=submit]{
 	background:none repeat scroll 0 0 #409DD7;
-	color:white;
-	font-size:12px;
+	color:white !important;
+	font-size:15px !important;
 	font-weight:bold;
 	letter-spacing:1px;
 	padding:5px 10px;
@@ -531,6 +534,7 @@ a:hover{
 	right:0;
 	text-align:right;
 	font-family: Arial;
+	border: 1px solid;
 }
 
 .submit:hover{
