--- a/trunk/themes/digressit-bold/style.css
+++ b/trunk/themes/digressit-bold/style.css
@@ -221,3 +221,39 @@ h1, h2, h2 a{
 .site-home .the_title{
 	display: none;
 }
+
+.comment{
+	display: none;
+}
+
+.paragraphembed {
+	font-size: 120%;
+	left: -15px;
+	position: absolute;
+	top: 35px;
+}
+
+.embedcode{
+	box-shadow: 3px 3px 3px #AAAAAA;
+
+}
+.paragraphembed a {
+	border-bottom:none !important;
+	padding: 3px;
+}
+
+.embedcode {
+	display: none;
+	position: absolute;
+	left: -2px;
+	top: -2px;
+	z-index: 100;
+	background: white;
+	border: 1px solid #ccc;
+	padding: 5px;
+	min-width: 200px;
+}
+.embedcode input, .embedcode textarea { z-index: 101; font-size: 10px; }
+.embedcode b { font-size: 13px; }
+.embedcode:hover { display: block; }
+.closeme { position: absolute; font-size: 60%; right: 3px; top: -1px; }
