--- a/trunk/themes/digressit-paper/style.css
+++ b/trunk/themes/digressit-paper/style.css
@@ -1,5 +1,5 @@
 /*	
-Theme Name: Digress.it Research Paper
+Theme Name: Digress.it Paper
 Theme URI: http://digress.it
 Description: Digress.it allows readers to comment paragraph by paragraph in the margins of a text. You can use it to comment, gloss, workshop, debate and more!
 Author: Eddie A Tejeda
@@ -7,16 +7,6 @@ Version: 3.2
 Author URI: http://eddietejeda.com
 License: GPLv2 (http://creativecommons.org/licenses/GPL/2.0/)
 Tags: buddypress, comments, annotation, discussion, commenting, paragraph, education, transparency
-
-Special thanks to:	
-The developers of JQuery @ www.jquery.com
-Joss Winn, Tony Hirst and Alex Bilbie @ University of Lincoln 
-Jesse Wilbur, Ben Vershbow, Dan Visel and Bob Stein @ futureofthebook.org
-
-Previous Versions:
-Mark James, for the famfamfam iconset @ http://www.famfamfam.com/lab/icons/silk/
-Matteo Bicocchi @ www.open-lab.com
-
 */
 
 
@@ -31,7 +21,7 @@ body	{
 	color: black;
 	}
 h1 {
-	font: 80px/1.2em Georgia,serif;
+	font: 300% Georgia,serif;
 	text-align:center;
 }
 h2 	{	
@@ -200,6 +190,8 @@ a.commentToText img {
 }
 
 #paper-2 {
+	transform: rotate(2deg);
+	-webkit-transform: rotate(2deg);
     -moz-transform: rotate(2deg);
     margin-left: 5px;
     z-index: -1;
@@ -207,6 +199,8 @@ a.commentToText img {
 
 
 #paper-1 {
+	transform: rotate(-3deg);
+    -webkit-transform: rotate(-3deg);
     -moz-transform: rotate(-3deg);
     margin-left: -10px;
     z-index: -2;
@@ -278,3 +272,44 @@ a:visited{
     margin: 0 5px 10px;
 	width: 99%;
 }
+
+#footer .foot{
+	padding: 10px;
+	font-size: 135%;
+}
+
+.comment{
+	display: none;
+}
+
+.paragraphembed {
+	font-size: 120%;
+	left: -15px;
+	position: absolute;
+	top: 35px;
+}
+
+.embedcode{
+	box-shadow: 3px 3px 3px #AAAAAA;
+
+}
+.paragraphembed a {
+	border-bottom:none !important;
+	padding: 3px;
+}
+
+.embedcode {
+	display: none;
+	position: absolute;
+	left: -2px;
+	top: -2px;
+	z-index: 100;
+	background: white;
+	border: 1px solid #ccc;
+	padding: 5px;
+	min-width: 200px;
+}
+.embedcode input, .embedcode textarea { z-index: 101; font-size: 10px; }
+.embedcode b { font-size: 13px; }
+.embedcode:hover { display: block; }
+.closeme { position: absolute; font-size: 60%; right: 3px; top: -1px; }
